add_subdirectory(game)
add_subdirectory(common)
add_subdirectory(server)
add_subdirectory(client)
add_subdirectory(network)
add_subdirectory(ui)
add_subdirectory(sound)
add_subdirectory(textures)
add_subdirectory(sprites)
add_subdirectory(particles)
add_subdirectory(shaders)
add_subdirectory(gfx)
add_subdirectory(ports)
add_subdirectory(main)
add_subdirectory(campaign)
